--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,7 @@
     "faker": "4.1.0",
     "firebase": "4.8.0",
     "jquery": "3.2.1",
-    "p5": "0.5.16"
+    "p5": "0.5.16",
+    "pako": "^1.0.6"
   }
 }
