--- a/client/package.json
+++ b/client/package.json
@@ -1,7 +1,8 @@
 {
   "name": "client",
   "version": "0.1.0",
-  "private": true,
+  "homepage": "http://agermanidis.github.io/UncannyRd",
+  "private": false,
   "dependencies": {
     "@tweenjs/tween.js": "17.1.1",
     "immutability-helper": "2.6.2",
@@ -15,12 +16,18 @@
     "react-icons": "2.2.7",
     "react-modal-dialog": "^4.0.7",
     "react-p5-wrapper": "0.0.4",
+    "react-rnd": "7.3.0",
     "react-scripts": "1.0.17"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
+  },
+  "devDependencies": {
+    "gh-pages": "1.1.0"
   }
 }
