--- a/client/package.json
+++ b/client/package.json
@@ -1,7 +1,7 @@
 {
   "name": "client",
   "version": "0.1.0",
-  "homepage": "http://agermanidis.github.io/UncannyRd",
+  "homepage": "http://uncannyroad.com",
   "private": false,
   "dependencies": {
     "@tweenjs/tween.js": "17.1.1",
@@ -28,6 +28,6 @@
     "deploy": "gh-pages -d build"
   },
   "devDependencies": {
-    "gh-pages": "1.1.0"
+    "gh-pages": "^1.1.0"
   }
 }
