mobile msg in landing

--- a/client/package.json
+++ b/client/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "@tweenjs/tween.js": "17.1.1",
     "immutability-helper": "2.6.2",
+    "is-mobile": "0.2.2",
     "jquery": "3.2.1",
     "pako": "1.0.6",
     "react": "^16.2.0",
